[package]
name = "oxide-flux-runtime"
version = "0.1.0"
edition = "2021"
description = "Top-level runtime for the Flux→PTX distributed GPU system. Combines Flux bytecode compilation, git-native construct loading, CRDT state sync, fleet coordination, and cudaclaw execution into one coherent runtime."
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/oxide-flux-runtime"
keywords = ["flux", "ptx", "gpu", "runtime", "cuda"]
categories = ["compilers", "concurrency"]
